--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="keyword_tag">NLP</span>  <span class="keyword_tag">Cyber Brain</span>
     </h2>
     <p>
-        BBSC(Bao Bao small cat) is the space shuttle flying toward <b>the next</b> generation. We devote to giving out the solution which <b>helps humans</b> to deal with the trivia and to save time for more valuable work. Based on NLP(natural language process), it can not just handle the <b>routine</b> stuff, but also become the aide <b>which is customized by the person</b>. With the faster and faster internet and coming 5G technology, it can be at your service everywhere as the cyber brain which is the extension of yours. 
+        <b>Chill Cat</b> is the space shuttle flying toward the next generation. We devote to giving out <b>the solution which helps humans</b> to deal with the trivia and to save time for more valuable work. Based on NLP(natural language process), it can not just handle the routine stuff, but also become the aide <b>which is customized by the person</b>. With the faster and faster internet and coming 5G technology, it can be at your service everywhere as the cyber brain which is the extension of yours. 
     </p>
     <p class="center" style="
     font-size: 24px;">
